# lumigalaxy.github.io

./: .gitignore  README.md  index.html  package.json
.github/workflows/: build-clawd.yml
002/: build-portable.py  netlify.toml
002/alien-pet/: README.md  alien-pet.js  demo.html
003-main/: Clawd-AI产品经理视角分析.docx  Clawd-团队协作指南.docx  Clawd-趣味性与可玩性功能提案.docx  GITHUB_DEPLOYMENT.md  ai-relationship-techniques-feishu.md  case-study.html
003-main/clawd-desktop-opencode-main/: Clawd-团队操作指南.pptx  LORE.md  ai-relationship-techniques.html  examples.html  package-lock.json  resources.html
003-main/src/: bug-game.css  bug-game.html  bug-game.js  dance-game.css  dance-game.html  dance-game.js  dialogue.js  easter-eggs.js  growth.js  index.html  mood.js  preload-bug.js  preload.js
005/: theme.json
alien_planet_page/: alien_page v1.0.html  alien_page v1.1.html  alien_page v1.2.html  alien_page v1.3.html  alien_page v2.0.html  alien_page v3.0.html  alien_page v3.2.html
archive/001/: 桌宠1.4.html
clawd-on-desk-0.6.0/: .gitignore  CLAUDE.md  package-lock.json  package.json  preview-alien.html
clawd-on-desk-0.6.0/agents/: codex-log-monitor.js
clawd-on-desk-0.6.0/hooks/: install.js
clawd-on-desk-0.6.0/src/: bubble.html  chat-bubble.html  chat-bubble.js  chat-renderer.js  chat-window.js  chat.html  hit-renderer.js  i18n.js  index.html  login-item.js  mac-window.js  main.js  (+18 more)
docs/: CHANGELOG.md  PRD.md  ROADMAP.md  architecture.md
桌宠相关文档/: index.html  package-lock.json  package.json
桌宠相关文档/src-tauri/: Cargo.toml  tauri.conf.json
桌宠相关文档/src-tauri/src/: lib.rs  main.rs
(+58 files in other folders)
